@@ -56,8 +56,6 @@ struct SortRegister;
  */
 class ConstrainedSortExecutor {
  public:
-  friend class Sorter;
-
   struct Properties {
     static const bool preservesOrder = false;
     static const bool allowsBlockPassthrough = false;
@@ -78,6 +76,8 @@ class ConstrainedSortExecutor {
    */
   std::pair<ExecutionState, Stats> produceRows(OutputAqlItemRow& output);
 
+  std::tuple<ExecutionState, Stats, size_t> skipRows(size_t toSkipRequested);
+
   /**
    * @brief This Executor knows how many rows it will produce and most by itself
    *        It also knows that it could produce less if the upstream only has fewer rows.
@@ -88,6 +88,16 @@ class ConstrainedSortExecutor {
   bool compareInput(size_t const& rosPos, InputAqlItemRow& row) const;
   arangodb::Result pushRow(InputAqlItemRow& row);
 
+  // We're done producing when we've emitted all rows from our heap.
+  bool doneProducing() const noexcept;
+
+  // We're done skipping when we've emitted all rows from our heap,
+  // AND emitted (in this case, skipped) all rows that were dropped during the
+  // sort as well. This is for fullCount queries only.
+  bool doneSkipping() const noexcept;
+
+  ExecutionState consumeInput();
+
  private:
   Infos& _infos;
   Fetcher& _fetcher;
@@ -95,6 +105,8 @@ class ConstrainedSortExecutor {
   size_t _returnNext;
   std::vector<size_t> _rows;
   size_t _rowsPushed;
+  size_t _rowsRead;
+  size_t _skippedAfter;
   SharedAqlItemBlockPtr _heapBuffer;
   std::unique_ptr<ConstrainedLessThan> _cmpHeap;  // in pointer to avoid
   OutputAqlItemRow _heapOutputRow;
